# hald

./: .gitignore  CHANGELOG.md  Containerfile  cabal.project  hald.cabal  install
.github/workflows/: build-hald.yml  build-timesink.yml  bump-bounds.yml  scorecard.yml
app/: Main.hs
app/Main/: Deployment.hs  Space.hs
container-distro/: Containerfile.timesink  Containerfile.void
container-distro/boot/: ald-boot.sh
container-distro/boot/90ald/: module-setup.sh
container-distro/boot/90ald-systemdless/: ald-hook.sh
docs/: LEGACY.md
src/: Main.hs
src/Hald/: Activate.hs  Cli.hs  Config.hs  Container.hs  Create.hs  Deployment.hs  Diff.hs  Fail.hs  Legacy.hs  Lock.hs  Space.hs  Status.hs  Util.hs
src/Hald/Assemble/: Activate.hs  Cas.hs  Create.hs  Gc.hs  Remove.hs
src/Hald/CAS/: GC.hs  Hash.hs  Ingest.hs
src/Hald/Cas/: Gc.hs  Hash.hs  Ingest.hs
src/Main/: Activate.hs  Cli.hs  Config.hs  Container.hs  Create.hs  Deployment.hs  Diff.hs  Fail.hs  Lock.hs  Space.hs  Status.hs  Util.hs
src/Main/Assemble/: Activate.hs  Create.hs  Gc.hs  Remove.hs
src/Main/CAS/: GC.hs  Hash.hs  Ingest.hs
utils/: Containerfile.arch  Containerfile.chimera  Containerfile.void
utils/boot/: ald-boot.service  ald-boot.sh  hald-boot.service  hald-boot.sh
utils/boot/90ald/: module-setup.sh
utils/boot/90ald-systemdless/: module-setup.sh
utils/boot/90hald/: module-setup.sh
utils/boot/90hald-systemdless/: hald-hook.sh  module-setup.sh
utils/boot/initramfs-tools/: hook  init-bottom-script  whald
utils/tools/: dep_check  librarizer
