cabal-version:      3.0
name:               hald
version:            0.3.0.0
synopsis: Container-based system update utility
-- description:
license:            LicenseRef-GLWTPL
license-file:       LICENSE
author:             fei
maintainer:         fei@timesink
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hald
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Main.Activate,
        Main.Assemble.Activate,
        Main.Assemble.Create,
        Main.Assemble.Gc,
        Main.Assemble.Remove,
        Main.Cli,
        Main.Config,
        Main.Container,
        Main.Create,
        Main.Deployment,
        Main.Diff,
        Main.Fail,
        Main.Lock,
        Main.Space,
        Main.Status,
        Main.Util
    -- other-extensions:
    build-depends:
        Glob,
        base ^>=4.17.2.1,
        containers,
        directory,
        filepath,
        optparse-applicative,
        process,
        text,
        unix
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -static -O2 -optl-static -optl-pthread
